message CFG_PLAYER
{
	required int32 prof = 1; 
	required int32 level = 2; 
	required int32 sex = 3; 
	required int32 exp = 4;
	required int32 hp = 5;
	required int32 strength = 6;                             //力量
	required int32 brain = 7;                                //智力
	required int32 charm = 8;                                //魅力
	required int32 phy_attack = 9;                           //物理攻击
	required int32 magic_attack = 10;                         //法术攻击
	required int32 phy_defence = 11;                          //物理防御
	required int32 magic_defence = 12;                        //法术防御
	required int32 parry_rate = 13;                           //招架几率
	required int32 counterattack_rate = 14;                   //反击几率
	required int32 hit_rate = 15;                             //命中几率
	required int32 jink_rate = 16;                            //闪避几率
	required int32 crit_rate = 17;                            //暴击几率
	required int32 speed = 18;                                //速度
	required int32 move_speed = 19;                           //移动速度	
}

message CFG_PLAYERS
{
	repeated CFG_PLAYER player = 1;
}
